Update Views User Group

--- a/public/assets/estilos.css
+++ b/public/assets/estilos.css
@@ -33,4 +33,11 @@
         align-items: center;
         justify-content: center;
     }
+    .permission-checkbox {
+      margin-right: 10px; /* Espacio a la derecha del checkbox */
+  }
+  
+  .form-check-label {
+      margin-left: 5px; /* Espacio a la izquierda de la etiqueta del checkbox */
+  }
     
