--- a/public/assets/estilos.css
+++ b/public/assets/estilos.css
@@ -37,88 +37,104 @@
 }
 /*Estilos navbar*/
 body {
-  display: flex;
-  margin: 0;
-  padding: 0;
+  display: flex !important;
+  margin: 0 !important;
+  padding: 0 !important;
 }
 
 .sidebar {
-  height: 100vh;
-  width: 250px;
-  position: fixed;
-  top: 0;
-  left: 0;
-  background-color: #f8f9fa;
-  padding-top: 20px;
-  box-shadow: 2px 0 5px rgba(0, 0, 0, 0.1);
-  overflow-y: auto;
+  height: 100vh !important;
+  width: 250px !important;
+  position: fixed !important;
+  top: 0 !important;
+  left: 0 !important;
+  background-color: #f8f9fa !important;
+  padding-top: 20px !important;
+  box-shadow: 2px 0 5px rgba(0, 0, 0, 0.1) !important;
+  overflow-y: auto !important;
 }
 
 .sidebar .nav-link {
-  padding: 10px 15px;
-  color: #333;
-  display: block;
+  padding: 10px 15px !important;
+  color: #333 !important;
+  display: block !important;
 }
 
 .sidebar .nav-link:hover {
-  background-color: #e9ecef;
+  background-color: #e9ecef !important;
 }
 
 .sidebar .collapse {
-  padding-left: 15px;
+  padding-left: 15px !important;
 }
 
 .sidebar .nav-item .collapse .nav-link {
-  padding-left: 30px;
+  padding-left: 30px !important;
 }
 
 .content {
-  margin-left: 250px;
-  padding: 20px;
-  flex: 1;
+  margin-left: 250px !important;
+  padding: 20px !important;
+  flex: 1 !important;
 }
 
 .nav-item .fa-cogs {
-  margin-right: 8px;
+  margin-right: 8px !important;
 }
+
 .sidebar.nav-item.nav-link.active {
-background-color: #e9ecef;
+  background-color: #e9ecef !important;
 }
+
 #configMenu {
-list-style-type: none; /* Elimina los puntos de la lista */
-padding: 0; /* Elimina el padding del ul */
-margin: 0; /* Elimina el margin del ul */
+  list-style-type: none !important; /* Elimina los puntos de la lista */
+  padding: 0 !important; /* Elimina el padding del ul */
+  margin: 0 !important; /* Elimina el margin del ul */
 }
 
 /* Asegura que cada elemento de la lista se muestre en una nueva línea */
 #configMenu .nav-item {
-display: block; /* Asegura que cada li se muestre como un bloque */
-margin-bottom: 10px; /* Añade espacio entre los elementos (opcional) */
+  display: block !important; /* Asegura que cada li se muestre como un bloque */
+  margin-bottom: 10px !important; /* Añade espacio entre los elementos (opcional) */
 }
 
 /* Asegura que los enlaces se comporten como bloques */
 #configMenu .nav-link {
-display: block; /* Asegura que cada enlace se muestre como un bloque */
+  display: block !important; /* Asegura que cada enlace se muestre como un bloque */
 }
+
 .hidden {
-display: none;
+  display: none !important;
 }
+
 .nav-link {
-display: flex;
-align-items: center; /* Alinea verticalmente el ícono y el texto */
+  display: flex !important;
+  align-items: center !important; /* Alinea verticalmente el ícono y el texto */
 }
 
 .nav-link i {
-margin-right: 15px; /* Ajusta el valor para definir el espacio deseado */
+  margin-right: 15px !important; /* Ajusta el valor para definir el espacio deseado */
 }
+
 .profile-dropdown {
-position: absolute; /* Posiciona el contenedor en relación a su contenedor padre */
-top: 0; /* Ajusta el valor según sea necesario */
-right: 0; /* Ajusta el valor según sea necesario */
-margin: 10px; /* Opcional: añade margen para separar del borde */
+  position: absolute !important; /* Posiciona el contenedor en relación a su contenedor padre */
+  top: 0 !important; /* Ajusta el valor según sea necesario */
+  right: 0 !important; /* Ajusta el valor según sea necesario */
+  margin: 10px !important; /* Opcional: añade margen para separar del borde */
 }
 
 .profile-dropdown .dropdown-menu {
-right: 0; /* Alinea el menú desplegable con el borde derecho del contenedor */
-left: auto; /* Asegura que el menú no se desplace a la izquierda */
+  right: 0 !important; /* Alinea el menú desplegable con el borde derecho del contenedor */
+  left: auto !important; /* Asegura que el menú no se desplace a la izquierda */
 }
+
+.toggle-icon {
+  transition: transform 0.3s ease !important;
+  display: inline-block !important;
+  margin-left: 10px !important;
+}
+
+.toggle-icon.rotate {
+  transform: rotate(180deg) !important;
+}
+
